Implement basic Discogs search functionality

--- a/Tubifarry/ILRepack.targets
+++ b/Tubifarry/ILRepack.targets
@@ -9,6 +9,7 @@
 			<InputAssemblies Include="$(OutputPath)Xabe.FFmpeg.dll" />
 			<InputAssemblies Include="$(OutputPath)Xabe.FFmpeg.Downloader.dll" />
 			<InputAssemblies Include="$(OutputPath)FuzzySharp.dll" />
+			<InputAssemblies Include="$(OutputPath)ParkSquare.Discogs.dll" />
 			<InputAssemblies Include="$(OutputPath)Microsoft.Extensions.Logging.Abstractions.dll" />
 			<InputAssemblies Include="$(OutputPath)Acornima.dll" />
 			<InputAssemblies Include="$(OutputPath)Jint.dll" />
