--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,4 @@ FodyWeavers.xsd
 /_plugins/SpotiarrTube
 /_plugins/Tubifarry
 /enc_temp_folder/f7b6bdaa49df014838e55dd376c78df
+/_plugins/UnitTest
