--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,5 @@ FodyWeavers.xsd
 /_plugins/Tubifarry
 /enc_temp_folder/f7b6bdaa49df014838e55dd376c78df
 /_plugins/UnitTest
+/.serena/memories
+/enc_temp_folder/958824a953d8ab818cf79311c5b5791e
