--- a/Tubifarry/Tubifarry.csproj
+++ b/Tubifarry/Tubifarry.csproj
@@ -16,10 +16,10 @@
 		<DefineConstants Condition="'$(Branch)' == 'develop'">$(DefineConstants);DEV_BRANCH</DefineConstants>
 		<DefineConstants Condition="'$(Branch)' != 'master' AND '$(Branch)' != 'develop'">$(DefineConstants);FEATURE_BRANCH</DefineConstants>
 	</PropertyGroup>
-	
+
 	<ItemGroup>
 		<PackageReference Include="FuzzySharp" Version="2.0.2" />
-		<PackageReference Include="ILRepack.Lib.MSBuild.Task" Version="2.0.40">
+		<PackageReference Include="ILRepack.Lib.MSBuild.Task" Version="2.0.43">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
@@ -28,16 +28,17 @@
 		<PackageReference Include="Xabe.FFmpeg.Downloader" Version="5.2.6" />
 		<PackageReference Include="YouTubeMusicAPI" Version="3.0.0" />
 	</ItemGroup>
-	
+
 	<ItemGroup>
 		<AdditionalFiles Remove="..\stylecop.json" />
 	</ItemGroup>
-	
+
 	<ItemGroup>
 		<ProjectReference Include="..\Submodules\Lidarr\src\NzbDrone.Common\Lidarr.Common.csproj" />
 		<ProjectReference Include="..\Submodules\Lidarr\src\NzbDrone.Core\Lidarr.Core.csproj" />
+		<ProjectReference Include="..\Submodules\SessionGenerator\YouTubeSessionGenerator\YouTubeSessionGenerator.csproj" />
 	</ItemGroup>
-	
+
 	<!-- Import the Debug.targets file -->
 	<Import Project="$(MSBuildProjectDirectory)\Debug.targets" />
 	<!-- Import the PluginInfo generation target -->
