--- a/Tubifarry/ILRepack.targets
+++ b/Tubifarry/ILRepack.targets
@@ -13,6 +13,7 @@
 			<InputAssemblies Include="$(OutputPath)Microsoft.Extensions.Logging.Abstractions.dll" />
 			<InputAssemblies Include="$(OutputPath)Microsoft.Bcl.AsyncInterfaces.dll" />
 			<InputAssemblies Include="$(OutputPath)Acornima.dll" />
+			<InputAssemblies Include="$(OutputPath)System.Text.Json.dll" />
 			<InputAssemblies Include="$(OutputPath)Jint.dll" />
 		</ItemGroup>
 
@@ -21,7 +22,7 @@
             Internalize="true"
             InputAssemblies="@(InputAssemblies)"
             TargetKind="Dll"
-            LibraryPath="..\Submodules\Lidarr\_output\net6.0\;$(OutputPath)"
+            LibraryPath="..\Submodules\Lidarr\_output\net8.0\;$(OutputPath)"
             OutputFile="$(OutputPath)$(AssemblyName).dll"
         />
 	</Target>
