--- a/.github/ISSUE_TEMPLATE/documentation_improvement.yml
+++ b/.github/ISSUE_TEMPLATE/documentation_improvement.yml
@@ -1,4 +1,4 @@
-name: "📚 Documentation Improvement"
+name: "Documentation Improvement"
 description: Report issues or suggest improvements for Tubifarry documentation
 title: "[DOCS] "
 labels: ["documentation"]
