--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,7 @@ jobs:
     secrets:       
       SPOTIFY_CLIENT_ID: ${{ secrets.SPOTIFY_CLIENT_ID }}       
       SPOTIFY_CLIENT_SECRET: ${{ secrets.SPOTIFY_CLIENT_SECRET }}     
+      YOUTUBE_SECRET: ${{ secrets.YOUTUBE_SECRET }}     
     needs: [metadata, git-info, dotnet-setup]      
 
   # Package the artifacts   
@@ -84,7 +85,8 @@ jobs:
       commit_messages: ${{ needs.git-info.outputs.commit_messages }}       
       git_commit: ${{ needs.git-info.outputs.git_commit }}       
       branch_repo_url: ${{ needs.git-info.outputs.branch_repo_url }}
-      git_branch: ${{ needs.git-info.outputs.git_branch }}     
+      git_branch: ${{ needs.git-info.outputs.git_branch }}
+      plugin_input_format: ${{ needs.git-info.outputs.plugin_input_format }}     
     needs: [metadata, git-info]      
 
   # Publish the release   
@@ -98,6 +100,7 @@ jobs:
       is_latestrelease: ${{ needs.git-info.outputs.is_latestrelease }}       
       release_notes_id: ${{ needs.release-notes.outputs.release_notes_id }}       
       git_commit: ${{ needs.git-info.outputs.git_commit }}       
-      branch_repo_url: ${{ needs.git-info.outputs.branch_repo_url }}     
+      branch_repo_url: ${{ needs.git-info.outputs.branch_repo_url }}
+      git_branch: ${{ needs.git-info.outputs.git_branch }}     
     needs: [metadata, git-info, compilation, packaging, release-notes]     
     if: needs.compilation.outputs.build_status == 'success'
