--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -35,6 +35,10 @@ on:
         required: true
         type: string
         description: "Current git branch"
+      plugin_input_format:
+        required: true
+        type: string
+        description: "Plugin input format: name@owner#branch"
     outputs:
       release_notes_id:
         description: "ID of the generated release notes"
@@ -84,7 +88,7 @@ jobs:
           
           **Plugin Installation:**  
           - In Lidarr, navigate to **System -> Plugins**
-          - Paste the URL: \`${{ inputs.branch_repo_url }}\`
+          - Enter: \`${{ inputs.plugin_input_format }}\`
           
           ---
           
@@ -94,11 +98,6 @@ jobs:
           **Minimum Lidarr Version:** ${{ inputs.minimum_lidarr_version }}
           **Commit:** ${{ inputs.git_commit }}
           EOL
-          
-          # Add extra line for branch detection if branch is not the default branch
-          if [ ! -z "$BRANCH_NAME" ] && [ "$BRANCH_NAME" != "$DEFAULT_BRANCH" ]; then
-            echo "Minimum Lidarr Version: 1000.${{ inputs.minimum_lidarr_version }} (This line is auto-generated for plugin parsing system - please disregard)" >> release_notes.md
-          fi
           
           # Debug: Show what was generated
           echo "Generated release notes:"
