--- a/Tubifarry/Tubifarry.csproj
+++ b/Tubifarry/Tubifarry.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
+		<DebugType Condition="'$(Configuration)'=='Debug'">embedded</DebugType>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<AssemblyName>Lidarr.Plugin.$(MSBuildProjectName)</AssemblyName>
@@ -16,7 +17,7 @@
 		<DefineConstants Condition="'$(Branch)' == 'develop'">$(DefineConstants);DEV_BRANCH</DefineConstants>
 		<DefineConstants Condition="'$(Branch)' != 'master' AND '$(Branch)' != 'develop'">$(DefineConstants);FEATURE_BRANCH</DefineConstants>
 	</PropertyGroup>
-
+	
 	<ItemGroup>
 		<PackageReference Include="FuzzySharp" Version="2.0.2" />
 		<PackageReference Include="ILRepack.Lib.MSBuild.Task" Version="2.0.44.1">
@@ -24,32 +25,40 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Shard.DownloadAssistant" Version="1.1.2" />
+		<PackageReference Include="System.Text.Json" Version="8.0.6" GeneratePathProperty="true" />
 		<PackageReference Include="Xabe.FFmpeg" Version="6.0.2" />
 		<PackageReference Include="Xabe.FFmpeg.Downloader" Version="6.0.2" />
 		<PackageReference Include="YouTubeMusicAPI" Version="3.0.3" />
 		<PackageReference Include="YouTubeSessionGenerator" Version="1.0.3" />
 	</ItemGroup>
-
+	
 	<ItemGroup>
 		<AdditionalFiles Remove="..\stylecop.json" />
 	</ItemGroup>
-
+	
 	<ItemGroup>
 		<ProjectReference Include="..\Submodules\Lidarr\src\NzbDrone.Common\Lidarr.Common.csproj" />
 		<ProjectReference Include="..\Submodules\Lidarr\src\NzbDrone.Core\Lidarr.Core.csproj" />
 	</ItemGroup>
-
+	
 	<ItemGroup>
-	  <PackageReference Update="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3">
-	    <PrivateAssets>all</PrivateAssets>
-	    <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-	  </PackageReference>
+		<PackageReference Update="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
-	<!-- Import the Debug.targets file -->
+	<!-- Import target files -->
+	<Import Project="$(MSBuildProjectDirectory)\PreBuild.targets" />
 	<Import Project="$(MSBuildProjectDirectory)\Debug.targets" />
-	<!-- Import the PluginInfo generation target -->
 	<Import Project="$(MSBuildProjectDirectory)\PluginInfo.targets" />
-	<!-- Import the PluginKeys generation target -->
 	<Import Project="$(MSBuildProjectDirectory)\PluginKeys.targets" />
+
+	<!-- Force copy System.Text.Json.dll to output directory for ILRepack -->
+	<Target Name="CopySystemTextJson" AfterTargets="Build">
+		<Copy
+			SourceFiles="$(PkgSystem_Text_Json)\lib\net8.0\System.Text.Json.dll"
+			DestinationFolder="$(OutputPath)"
+			SkipUnchangedFiles="true" />
+	</Target>
 </Project>
